--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
           <section class="section sectionWelcome">
             <i class="circle">
               <span class="customerCount">
+                <img src="images/Fill 16.svg" alt="">
                 <strong>11,256</strong>
                 <small>Happy Customers</small>
               </span>
             </i>
             <div class="contentWrapper">
+              <figure>
+                <img src="images/splash.png" />
+              </figure>
               <h1>Welcome to <br> Gratisfaction</h1>
               <p>Let us take you through <br>introduction before you setup</p>
             </div>
@@ -34,7 +38,12 @@
                   <a href="#"  data-slide="4">UI Customization</a>
                 </nav>
                 <div class="setupSteps">
-                  step 1
+                  <figure><img src="images/step-1.jpg" alt=""></figure>
+                  <div class="stepInfo">
+                    <i>1</i>
+                    <h5>Start with <br>basic settings</h5>
+                    <p>You can pause or edit the program at anytime. Even if the program is live. You are in control of your program</p>
+                  </div>
                 </div>
               </div>
           </section>
@@ -49,7 +58,12 @@
                   <a href="#"  data-slide="4">UI Customization</a>
                 </nav>
                 <div class="setupSteps">
-                  step 2
+                  <figure><img src="images/step-2.jpg" alt=""></figure>
+                  <div class="stepInfo">
+                    <i>2</i>
+                    <h5>Start with <br>basic settings</h5>
+                    <p>You can pause or edit the program at anytime. Even if the program is live. You are in control of your program</p>
+                  </div>
                 </div>
               </div>
             </section>
@@ -64,7 +78,12 @@
                   <a href="#"  data-slide="4">UI Customization</a>
                 </nav>
                 <div class="setupSteps">
-                  step 3
+                  <figure><img src="images/step-3.jpg" alt=""></figure>
+                  <div class="stepInfo">
+                    <i>3</i>
+                    <h5>Start with <br>basic settings</h5>
+                    <p>You can pause or edit the program at anytime. Even if the program is live. You are in control of your program</p>
+                  </div>
                 </div>
               </div>
           </section>
@@ -77,7 +96,9 @@
               </div>
               <div class="livePreviewBox">
                 <div class="livePreview">
-                  <figure></figure>
+                  <figure>
+                    <img src="images/step-1.jpg" alt="">
+                  </figure>
                 </div>
                 <div class="campaignPoints">
                   <ul>
@@ -93,6 +114,7 @@
             <i class="circle"></i>
             <div class="contentWrapper">
               <h3>You are ready! <br> Get started.</h3>
+              <a href="#" class="btn btnColor1">setup now</a>
             </div>                
           </section>
       </div>
