integrate preview section

--- a/index.html
+++ b/index.html
@@ -92,19 +92,30 @@
             <div class="contentWrapper">
               <h2>What will happen?</h2>
               <div class="liveControl">
-                Whenyour campaign is live controls come here
+                <p>When your campaign is...</p>
+                <div class="previewSwitch">
+                  <strong>Live</strong>
+                  <i></i>
+                  <strong>Pause</strong>
+                </div>
+                <small>Switch the toggle to<br> see for yourself.</small>
               </div>
               <div class="livePreviewBox">
                 <div class="livePreview">
                   <figure>
-                    <img src="images/step-1.jpg" alt="">
+                    <img src="images/preview-1.jpg" class="disabled">
+                    <img src="images/preview-2.jpg" class="enabled">
                   </figure>
+                  <p>
+                    <small class="disabled">This is your example livewebsite, with gratisfaction plugin disabled </small>
+                    <small class="enabled">This is your example livewebsite, with gratisfaction plugin enabled. You can customize its colors, fonts, even the placement of the right floating patch.</small>
+                  </p>
                 </div>
                 <div class="campaignPoints">
                   <ul>
-                    <li>Guest checklist shoud be optional - So customers shoud have the option to create an account</li>
-                    <li>You can enroll past customers</li>
-                    <li>You are giving 100 welcome points, puchase points = 1 point for every currency spent</li>
+                    <li><i class="bullet"></i><span>Guest checklist shoud be optional - So customers shoud have the option to create an account</span></li>
+                    <li><i class="bullet"></i><span>You can enroll past customers</span></li>
+                    <li><i class="bullet"></i><span>You are giving 100 welcome points, puchase points = 1 point for every currency spent</span></li>
                   </ul>
                 </div>
               </div>
