changes in livepreiew section

--- a/index.html
+++ b/index.html
@@ -93,12 +93,58 @@
               <h2>What will happen?</h2>
               <div class="liveControl">
                 <p>When your campaign is...</p>
-                <div class="previewSwitch">
+                <div class="previewSwitch"  data-slide="6">
                   <strong>Live</strong>
                   <i></i>
                   <strong>Pause</strong>
                 </div>
-                <small>Switch the toggle to<br> see for yourself.</small>
+                <small>
+                  Switch the toggle to<br> see for yourself.
+                  <svg viewBox="0 0 45.2 13.4" xml:space="preserve">
+                    <path d="M0.2,10.9c0,0,21.7,7.1,38.9-5.3c1.8-1.3,3.5-2.8,5.1-4.5"/>
+                    <path d="M38.1,0.5l6.5,0.3l-0.9,7"/>
+                  </svg>
+                </small>
+              </div>
+              <div class="livePreviewBox">
+                <div class="livePreview">
+                  <figure>
+                    <img src="images/preview-1.jpg" class="disabled">
+                    <img src="images/preview-2.jpg" class="enabled">
+                  </figure>
+                  <p>
+                    <small class="disabled">This is your example livewebsite, with gratisfaction plugin disabled </small>
+                    <small class="enabled">This is your example livewebsite, with gratisfaction plugin enabled. You can customize its colors, fonts, even the placement of the right floating patch.</small>
+                  </p>
+                </div>
+                <div class="campaignPoints">
+                  <ul>
+                    <li><i class="bullet"></i><span>Guest checklist shoud be optional - So customers shoud have the option to create an account</span></li>
+                    <li><i class="bullet"></i><span>You can enroll past customers</span></li>
+                    <li><i class="bullet"></i><span>You are giving 100 welcome points, puchase points = 1 point for every currency spent</span></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </section>
+          <section class="section sectionPreview preview-active">                
+            <i class="circle"></i>
+            <div class="contentWrapper">
+              <h2>What will happen?</h2>
+              <div class="liveControl">
+                <p>When your campaign is...</p>
+                <div class="previewSwitch active"  data-slide="5">
+                  <strong>Live</strong>
+                  <i></i>
+                  <strong>Pause</strong>
+                </div>
+                <small>
+                  Switch the toggle to<br> see for yourself.
+                  <svg viewBox="0 0 45.2 13.4" xml:space="preserve">
+                    <path d="M0.2,10.9c0,0,21.7,7.1,38.9-5.3c1.8-1.3,3.5-2.8,5.1-4.5"/>
+                    <path d="M38.1,0.5l6.5,0.3l-0.9,7"/>
+                  </svg>
+                </small>
               </div>
               <div class="livePreviewBox">
                 <div class="livePreview">
