--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.css">
   </head>
   <body>
+      <header>
+        <a href="#" class="logo">
+          <img src="images/logo_gr.png" alt="Gratisfaction">
+        </a>
+        <a href="mailto:info@appsmav.com" class="btn btnGrey">Write to Us</a>
+      </header>
       <div class="mainBlock">
           <section class="section sectionWelcome">
             <i class="circle">
               <span class="customerCount">
-                <img src="images/Fill 16.svg" alt="">
+                <i class="icon-heart"></i>
                 <strong>11,256</strong>
                 <small>Happy Customers</small>
               </span>
+              <i class="icon-mouse">
+                <span>Scroll Down</span>
+              </i>
             </i>
             <div class="contentWrapper">
               <figure>
