--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.css">
   </head>
   <body>
+    <div class="guidePageWrapper">
+      <i class="circle"></i>
       <header>
         <a href="#" class="logo">
           <img src="images/logo_gr.png" alt="Gratisfaction">
@@ -18,26 +20,21 @@
       </header>
       <div class="mainBlock">
           <section class="section sectionWelcome">
-            <i class="circle">
-              <span class="customerCount">
-                <i class="icon-heart"></i>
-                <strong>11,256</strong>
-                <small>Happy Customers</small>
-              </span>
-              <i class="icon-mouse">
-                <span>Scroll Down</span>
-              </i>
-            </i>
             <div class="contentWrapper">
+                <span class="customerCount">
+                  <i class="icon-heart"></i>
+                  <strong>11,256</strong>
+                  <small>Happy Customers</small>
+                </span>
               <figure>
                 <img src="images/splash.png" />
               </figure>
-              <h1>Welcome to <br> Gratisfaction</h1>
-              <p>Let us take you through <br>introduction before you setup</p>
+              <h1>Welcome to Gratisfaction</h1>
+              <button class="btn btnBlack">view Quick setup guide <i class="icon-right-arrow"></i></button>
+              <a href="#" class="skip">Skip guide and start setup</a>
             </div>
           </section>
           <section class="section sectionSetup step1">
-            <i class="circle"></i>   
               <div class="contentWrapper">
                 <h2>How to setup</h2>
                 <h4>During onboarding we will take you <br> through these three steps</h4>
@@ -57,7 +54,6 @@
               </div>
           </section>
           <section class="section sectionSetup step2">
-            <i class="circle"></i> 
               <div class="contentWrapper">
                 <h2>How to setup</h2>
                 <h4>During onboarding we will take you <br> through these three steps</h4>
@@ -77,7 +73,6 @@
               </div>
             </section>
             <section class="section sectionSetup step3">
-              <i class="circle"></i> 
               <div class="contentWrapper">
                 <h2>How to setup</h2>
                 <h4>During onboarding we will take you <br> through these three steps</h4>
@@ -97,7 +92,6 @@
               </div>
           </section>
           <section class="section sectionPreview">                
-            <i class="circle"></i>
             <div class="contentWrapper">
               <h2>What will happen?</h2>
               <div class="liveControl">
@@ -137,7 +131,6 @@
             </div>
           </section>
           <section class="section sectionPreview preview-active">                
-            <i class="circle"></i>
             <div class="contentWrapper">
               <h2>What will happen?</h2>
               <div class="liveControl">
@@ -177,13 +170,13 @@
             </div>
           </section>
           <section class="section sectionReady">
-            <i class="circle"></i>
             <div class="contentWrapper">
               <h3>You are ready! <br> Get started.</h3>
               <a href="#" class="btn btnColor1">setup now</a>
             </div>                
           </section>
       </div>
+    </div>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.js"></script>
       <script src="scripts/main.js"></script>
   </body>
