set scroll & classes

--- a/index.html
+++ b/index.html
@@ -34,140 +34,72 @@
               <a href="#" class="skip">Skip guide and start setup</a>
             </div>
           </section>
-          <section class="section sectionSetup step1">
+          <section class="section sectionSetup" data-step="1">
               <div class="contentWrapper">
                 <h2>How to setup</h2>
-                <h4>During onboarding we will take you <br> through these three steps</h4>
+                <h4>During onboarding we will take these <span>three quick and simple steps</span></h4>
                 <nav class="stepsNav">
-                  <a href="#" data-slide="2">Basic Campaign setup</a>
-                  <a href="#"  data-slide="3">Loyalty rewards setup</a>
-                  <a href="#"  data-slide="4">UI Customization</a>
-                </nav>
-                <div class="setupSteps">
-                  <figure><img src="images/step-1.jpg" alt=""></figure>
-                  <div class="stepInfo">
-                    <i>1</i>
-                    <h5>Start with <br>basic settings</h5>
-                    <p>You can pause or edit the program at anytime. Even if the program is live. You are in control of your program</p>
-                  </div>
-                </div>
-              </div>
-          </section>
-          <section class="section sectionSetup step2">
-              <div class="contentWrapper">
-                <h2>How to setup</h2>
-                <h4>During onboarding we will take you <br> through these three steps</h4>
-                <nav class="stepsNav">
-                  <a href="#" data-slide="2">Basic Campaign setup</a>
-                  <a href="#"  data-slide="3">Loyalty rewards setup</a>
-                  <a href="#"  data-slide="4">UI Customization</a>
-                </nav>
-                <div class="setupSteps">
-                  <figure><img src="images/step-2.jpg" alt=""></figure>
-                  <div class="stepInfo">
-                    <i>2</i>
-                    <h5>Start with <br>basic settings</h5>
-                    <p>You can pause or edit the program at anytime. Even if the program is live. You are in control of your program</p>
-                  </div>
-                </div>
-              </div>
-            </section>
-            <section class="section sectionSetup step3">
-              <div class="contentWrapper">
-                <h2>How to setup</h2>
-                <h4>During onboarding we will take you <br> through these three steps</h4>
-                <nav class="stepsNav">
-                  <a href="#" data-slide="2">Basic Campaign setup</a>
-                  <a href="#"  data-slide="3">Loyalty rewards setup</a>
-                  <a href="#"  data-slide="4">UI Customization</a>
-                </nav>
-                <div class="setupSteps">
-                  <figure><img src="images/step-3.jpg" alt=""></figure>
-                  <div class="stepInfo">
-                    <i>3</i>
-                    <h5>Start with <br>basic settings</h5>
-                    <p>You can pause or edit the program at anytime. Even if the program is live. You are in control of your program</p>
-                  </div>
-                </div>
-              </div>
-          </section>
-          <section class="section sectionPreview">                
-            <div class="contentWrapper">
-              <h2>What will happen?</h2>
-              <div class="liveControl">
-                <p>When your campaign is...</p>
-                <div class="previewSwitch"  data-slide="6">
-                  <strong>Live</strong>
                   <i></i>
-                  <strong>Pause</strong>
+                  <a href="#" data-step="1">Setup</a>
+                  <a href="#"  data-step="2">Rewards</a>
+                  <a href="#"  data-step="3">Themes</a>
+                </nav>
+                <div class="setUpStepsWrapper">
+                  <div class="setupSteps step-1">
+                    <figure><img src="images/step-1.jpg" alt=""></figure>
+                    <div class="stepInfo">
+                      <ul>
+                        <li>
+                          <h4>Points program</h4>
+                          <p>Start rewarding your <br>customers for purchases</p>
+                        </li>
+                        <li>
+                          <h4>Pay by points</h4>
+                          <p>Setup if customers can <br>pay using their points</p>
+                        </li>
+                        <li>
+                          <h4>Sign up bonus</h4>
+                          <p>Reward customers for creating <br>an account on your store</p>
+                        </li>
+                        <li>
+                          <h4>Referral program</h4>
+                          <p>Setup refer a friend program</p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="setupSteps step-2">
+                    <figure><img src="images/step-2.jpg" alt=""></figure>
+                    <div class="stepInfo">
+                      <ul>
+                        <li>
+                          <h4>Rewards redemption</h4>
+                          <p>Setup rewards that can be <br>redeemed when customers <br>collect enough points. </p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                  <div class="setupSteps step-3">
+                    <figure><img src="images/step-3.jpg" alt=""></figure>
+                    <div class="stepInfo">
+                      <ul>
+                        <li>
+                          <h4>Customize widget</h4>
+                          <p>Change the layout, position and <br>behaviour to complement your site</p>
+                        </li>
+                        <li>
+                          <h4>Customize pop up</h4>
+                          <p>Change the layout, behavior, <br>etcr to complement your brand</p>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
                 </div>
-                <small>
-                  Switch the toggle to<br> see for yourself.
-                  <svg viewBox="0 0 45.2 13.4" xml:space="preserve">
-                    <path d="M0.2,10.9c0,0,21.7,7.1,38.9-5.3c1.8-1.3,3.5-2.8,5.1-4.5"/>
-                    <path d="M38.1,0.5l6.5,0.3l-0.9,7"/>
-                  </svg>
-                </small>
-              </div>
-              <div class="livePreviewBox">
-                <div class="livePreview">
-                  <figure>
-                    <img src="images/preview-1.jpg" class="disabled">
-                    <img src="images/preview-2.jpg" class="enabled">
-                  </figure>
-                  <p>
-                    <small class="disabled">This is your example livewebsite, with gratisfaction plugin disabled </small>
-                    <small class="enabled">This is your example livewebsite, with gratisfaction plugin enabled. You can customize its colors, fonts, even the placement of the right floating patch.</small>
-                  </p>
-                </div>
-                <div class="campaignPoints">
-                  <ul>
-                    <li><i class="bullet"></i><span>Guest checklist shoud be optional - So customers shoud have the option to create an account</span></li>
-                    <li><i class="bullet"></i><span>You can enroll past customers</span></li>
-                    <li><i class="bullet"></i><span>You are giving 100 welcome points, puchase points = 1 point for every currency spent</span></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </section>
-          <section class="section sectionPreview preview-active">                
-            <div class="contentWrapper">
-              <h2>What will happen?</h2>
-              <div class="liveControl">
-                <p>When your campaign is...</p>
-                <div class="previewSwitch active"  data-slide="5">
-                  <strong>Live</strong>
-                  <i></i>
-                  <strong>Pause</strong>
-                </div>
-                <small>
-                  Switch the toggle to<br> see for yourself.
-                  <svg viewBox="0 0 45.2 13.4" xml:space="preserve">
-                    <path d="M0.2,10.9c0,0,21.7,7.1,38.9-5.3c1.8-1.3,3.5-2.8,5.1-4.5"/>
-                    <path d="M38.1,0.5l6.5,0.3l-0.9,7"/>
-                  </svg>
-                </small>
-              </div>
-              <div class="livePreviewBox">
-                <div class="livePreview">
-                  <figure>
-                    <img src="images/preview-1.jpg" class="disabled">
-                    <img src="images/preview-2.jpg" class="enabled">
-                  </figure>
-                  <p>
-                    <small class="disabled">This is your example livewebsite, with gratisfaction plugin disabled </small>
-                    <small class="enabled">This is your example livewebsite, with gratisfaction plugin enabled. You can customize its colors, fonts, even the placement of the right floating patch.</small>
-                  </p>
-                </div>
-                <div class="campaignPoints">
-                  <ul>
-                    <li><i class="bullet"></i><span>Guest checklist shoud be optional - So customers shoud have the option to create an account</span></li>
-                    <li><i class="bullet"></i><span>You can enroll past customers</span></li>
-                    <li><i class="bullet"></i><span>You are giving 100 welcome points, puchase points = 1 point for every currency spent</span></li>
-                  </ul>
+                <div class="bottomNav">
+                  <a href="#" class="back ctaPrev"><i class="icon-left-arrow"></i> Back</a>
+                  <button class="btn btnOrange ctaNext">Next <i class="icon-right-arrow"></i></button>
                 </div>
               </div>
-            </div>
           </section>
           <section class="section sectionReady">
             <div class="contentWrapper">
