--- a/index.html
+++ b/index.html
@@ -1,115 +1,148 @@
 <html>
-  <head>
-    <title>GR - Onboarding</title>
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Heebo:400,900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.css">
-  </head>
-  <body>
-    <div class="guidePageWrapper">
-      <i class="circle"></i>
-      <header>
-        <a href="#" class="logo">
-          <img src="images/logo_gr.png" alt="Gratisfaction">
-        </a>
-        <a href="mailto:info@appsmav.com" class="btn btnGrey">Write to Us</a>
-      </header>
-      <div class="mainBlock">
-          <section class="section sectionWelcome">
-            <div class="contentWrapper">
-                <span class="customerCount">
-                  <i class="icon-heart"></i>
-                  <strong>11,256</strong>
-                  <small>Happy Customers</small>
-                </span>
-              <figure>
-                <img src="images/splash.png" />
-              </figure>
-              <h1>Welcome to Gratisfaction</h1>
-              <button class="btn btnBlack">view Quick setup guide <i class="icon-right-arrow"></i></button>
-              <a href="#" class="skip">Skip guide and start setup</a>
-            </div>
-          </section>
-          <section class="section sectionSetup" data-step="1">
-              <div class="contentWrapper">
-                <h2>How to setup</h2>
-                <h4>During onboarding we will take these <span>three quick and simple steps</span></h4>
-                <nav class="stepsNav">
-                  <i></i>
-                  <a href="#" data-step="1">Setup</a>
-                  <a href="#"  data-step="2">Rewards</a>
-                  <a href="#"  data-step="3">Themes</a>
-                </nav>
-                <div class="setUpStepsWrapper">
-                  <div class="setupSteps step-1">
-                    <figure><img src="images/step-1.jpg" alt=""></figure>
-                    <div class="stepInfo">
-                      <ul>
-                        <li>
-                          <h4>Points program</h4>
-                          <p>Start rewarding your <br>customers for purchases</p>
-                        </li>
-                        <li>
-                          <h4>Pay by points</h4>
-                          <p>Setup if customers can <br>pay using their points</p>
-                        </li>
-                        <li>
-                          <h4>Sign up bonus</h4>
-                          <p>Reward customers for creating <br>an account on your store</p>
-                        </li>
-                        <li>
-                          <h4>Referral program</h4>
-                          <p>Setup refer a friend program</p>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="setupSteps step-2">
-                    <figure><img src="images/step-2.jpg" alt=""></figure>
-                    <div class="stepInfo">
-                      <ul>
-                        <li>
-                          <h4>Rewards redemption</h4>
-                          <p>Setup rewards that can be <br>redeemed when customers <br>collect enough points. </p>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="setupSteps step-3">
-                    <figure><img src="images/step-3.jpg" alt=""></figure>
-                    <div class="stepInfo">
-                      <ul>
-                        <li>
-                          <h4>Customize widget</h4>
-                          <p>Change the layout, position and <br>behaviour to complement your site</p>
-                        </li>
-                        <li>
-                          <h4>Customize pop up</h4>
-                          <p>Change the layout, behavior, <br>etcr to complement your brand</p>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                <div class="bottomNav">
-                  <a href="#" class="back ctaPrev"><i class="icon-left-arrow"></i> Back</a>
-                  <button class="btn btnOrange ctaNext">Next <i class="icon-right-arrow"></i></button>
-                </div>
+
+<head>
+  <title>GR - Onboarding</title>
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <link href="https://fonts.googleapis.com/css?family=Heebo:400,900&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.css">
+</head>
+
+<body>
+  <div class="guidePageWrapper">
+    <i class="circle"></i>
+    <header>
+      <a href="#" class="logo">
+        <img src="images/logo_gr.png" alt="Gratisfaction">
+      </a>
+      <a href="mailto:info@appsmav.com" class="btn btnGrey">Write to Us</a>
+    </header>
+    <div class="mainBlock">
+      <section class="section sectionWelcome">
+        <div class="contentWrapper">
+          <span class="customerCount">
+            <i class="icon-heart"></i>
+            <strong>11,256</strong>
+            <small>Happy Customers</small>
+          </span>
+          <figure>
+            <img src="images/splash.png" />
+          </figure>
+          <h1>Welcome to Gratisfaction</h1>
+          <button class="btn btnBlack">view Quick setup guide <i class="icon-right-arrow"></i></button>
+          <a href="#" class="skip">Skip guide and start setup</a>
+        </div>
+      </section>
+      <section class="section sectionSetup" data-step="1">
+        <div class="contentWrapper">
+          <h2>How to setup</h2>
+          <h4>During onboarding we will take these <span>three quick and simple steps</span></h4>
+          <nav class="stepsNav">
+            <i></i>
+            <a href="#" data-step="1">Setup</a>
+            <a href="#" data-step="2">Rewards</a>
+            <a href="#" data-step="3">Themes</a>
+          </nav>
+          <div class="setUpStepsWrapper">
+            <div class="setupSteps step-1">
+              <figure><img src="images/step-1.jpg" alt=""></figure>
+              <div class="stepInfo">
+                <ul>
+                  <li>
+                    <h4>Points program</h4>
+                    <p>Start rewarding your <br>customers for purchases</p>
+                  </li>
+                  <li>
+                    <h4>Pay by points</h4>
+                    <p>Setup if customers can <br>pay using their points</p>
+                  </li>
+                  <li>
+                    <h4>Sign up bonus</h4>
+                    <p>Reward customers for creating <br>an account on your store</p>
+                  </li>
+                  <li>
+                    <h4>Referral program</h4>
+                    <p>Setup refer a friend program</p>
+                  </li>
+                </ul>
               </div>
-          </section>
-          <section class="section sectionReady">
-            <div class="contentWrapper">
-              <h3>You are ready! <br> Get started.</h3>
-              <a href="#" class="btn btnColor1">setup now</a>
-            </div>                
-          </section>
-      </div>
+            </div>
+            <div class="setupSteps step-2">
+              <figure><img src="images/step-2.jpg" alt=""></figure>
+              <div class="stepInfo">
+                <ul>
+                  <li>
+                    <h4>Rewards redemption</h4>
+                    <p>Setup rewards that can be <br>redeemed when customers <br>collect enough points. </p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="setupSteps step-3">
+              <figure><img src="images/step-3.jpg" alt=""></figure>
+              <div class="stepInfo">
+                <ul>
+                  <li>
+                    <h4>Customize widget</h4>
+                    <p>Change the layout, position and <br>behaviour to complement your site</p>
+                  </li>
+                  <li>
+                    <h4>Customize pop up</h4>
+                    <p>Change the layout, behavior, <br>etcr to complement your brand</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="bottomNav">
+            <a href="#" class="back ctaPrev"><i class="icon-left-arrow"></i> Back</a>
+            <button class="btn btnOrange ctaNext">Next <i class="icon-right-arrow"></i></button>
+          </div>
+        </div>
+      </section>
+      <section class="section sectionReady">
+        <span class="circle">
+          <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 500 500" xml:space="preserve">
+            <defs>
+              <linearGradient id="Gradient1" gradientTransform="rotate(90)">
+                <stop offset="0%" stop-color="#3bda82" />
+                <stop offset="80%" stop-color="#1e785d" />
+                <stop offset="100%" stop-color="#228562" />
+              </linearGradient>
+              <linearGradient id="Gradient2" gradientTransform="rotate(90)">
+                <stop offset="0%" stop-color="#093042" />
+                <stop offset="80%" stop-color="#1e785d" />
+                <stop offset="100%" stop-color="#228562" />
+              </linearGradient>
+              <pattern id="Pattern" x="0" y="0" width="500" height="500" patternUnits="userSpaceOnUse">
+                <g transform="rotate(0, 250, 250)">
+                  <rect shape-rendering="crispEdges" x="0" y="0" width="250" height="500" fill="url(#Gradient1)" />
+                  <rect shape-rendering="crispEdges" x="250" y="0" width="250" height="500" fill="url(#Gradient2)" />
+                </g>
+              </pattern>
+            </defs>
+            <path class="donut" style="stroke: url(#Pattern);" fill='transparent' stroke-dasharray="1570 1570" stroke-dashoffset="0" stroke-width='30' d="M250,19c127.6,0,231,103.4,231,231S377.6,481,250,481S19,377.6,19,250S122.4,19,250,19z"/>
+          </svg>
+        </span>
+        <div class="contentWrapper">
+          <h3>You are ready! <br> Get started.</h3>
+          <ul>
+            <li>
+              <i class="icon-settings"></i>
+              <p>You can pause and <br> edit any of these <br> features at any time</p>
+            </li>
+            <li>
+              <i class="icon-list"></i>
+              <p>More features are <br>available after the <br>initial setup</p>
+            </li>
+          </ul>
+          <a href="#" class="btn btnOrange">setup now <i class="icon-right-arrow"></i></a>
+        </div>
+      </section>
     </div>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.js"></script>
-      <script src="scripts/main.js"></script>
-  </body>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.js"></script>
+  <script src="scripts/main.js"></script>
+</body>
+
 </html>
