final changes on onbarding screen

--- a/index.html
+++ b/index.html
@@ -47,50 +47,25 @@
             <div class="setupSteps step-1">
               <figure><img src="images/step-1.jpg" alt=""></figure>
               <div class="stepInfo">
-                <ul>
-                  <li>
-                    <h4>Points program</h4>
-                    <p>Start rewarding your <br>customers for purchases</p>
-                  </li>
-                  <li>
-                    <h4>Pay by points</h4>
-                    <p>Setup if customers can <br>pay using their points</p>
-                  </li>
-                  <li>
-                    <h4>Sign up bonus</h4>
-                    <p>Reward customers for creating <br>an account on your store</p>
-                  </li>
-                  <li>
-                    <h4>Referral program</h4>
-                    <p>Setup refer a friend program</p>
-                  </li>
-                </ul>
+                <i>1</i>
+                <h5>Start with <br>basic settings</h5>
+                <p>You can pause or edit the <br>program at anytime. Even if the <br>program is live. You are in <br>control of your program</p>
               </div>
             </div>
             <div class="setupSteps step-2">
               <figure><img src="images/step-2.jpg" alt=""></figure>
               <div class="stepInfo">
-                <ul>
-                  <li>
-                    <h4>Rewards redemption</h4>
-                    <p>Setup rewards that can be <br>redeemed when customers <br>collect enough points. </p>
-                  </li>
-                </ul>
+                <i>2</i>
+                <h5>Setup your <br>Loyalty Rewards</h5>
+                <p>You can pause or edit the <br>program at anytime. Even if the <br>program is live. You are in <br>control of your program</p>
               </div>
             </div>
             <div class="setupSteps step-3">
               <figure><img src="images/step-3.jpg" alt=""></figure>
               <div class="stepInfo">
-                <ul>
-                  <li>
-                    <h4>Customize widget</h4>
-                    <p>Change the layout, position and <br>behaviour to complement your site</p>
-                  </li>
-                  <li>
-                    <h4>Customize pop up</h4>
-                    <p>Change the layout, behavior, <br>etcr to complement your brand</p>
-                  </li>
-                </ul>
+                <i>3</i>
+                <h5>Customize <br>plugin's UI</h5>
+                <p>Customize the plugin's UI, <br>placement of the plugins <br><br>You can change the theme <br>to align with your websites.</p>
               </div>
             </div>
           </div>
